update env and backend

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 JWT_SECRET=repair-secret-2025
 PORT=3000
-TEST_ENV=hello-world
+MONGO_URI=mongodb+srv://wutheringid701_db_user:y3HDNlMvmXFv64VM@cluster0.zffs8jm.mongodb.net/repair_system?retryWrites=true&w=majority
